# openclassrooms_ai_engineer

./: LICENSE  README.md  pyproject.toml
2_cloth_segm/: ModeTrends.pptx
3_classification/: classification.ipynb
3_conso_energie_co2/: Kseniia_Sazonova_1_notebook_032026.ipynb  README.md  pyproject.toml
4_classification/: pyproject.toml
